--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "ngrok": "ngrok https 5000"
+    "ngrok": "ngrok http 4200"
   },
   "repository": {
     "type": "git",
@@ -19,9 +19,12 @@
   },
   "homepage": "https://github.com/Hydsoled/university#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "botbuilder-adapter-facebook": "^1.0.11",
+    "botkit": "^4.10.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "generator-botkit": "^4.10.0",
     "nodemon": "^2.0.4"
   }
 }
