--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
   "homepage": "https://github.com/Hydsoled/university#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "botbuilder-adapter-facebook": "^1.0.11",
     "botkit": "^4.10.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "request": "^2.88.2"
   }
 }
