--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "ngrok": "ngrok http 4200"
+    "ngrok": "configs/ngrok http 4200"
   },
   "repository": {
     "type": "git",
