--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "botkit": "^4.10.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.11.10",
     "nodemon": "^2.0.4",
     "request": "^2.88.2"
   }
